# esp32-mender-client

./: .gitignore  Cargo.toml  README.md  flash.bat  partitions.csv.template
.cargo/: config.toml
.github/workflows/: clippy_fmt_check.yml
examples/esp32c3/: Cargo.toml  generate_bin_file.py
examples/esp32c3/.cargo/: config.toml
examples/esp32c3/src/: main.rs
examples/esp32c6/: Cargo.toml  flash.bat  generate_bin_file.py  partitions.csv
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/src/: main.rs
examples/esp32s3/: Cargo.toml  build.rs
examples/esp32s3/.cargo/: config.toml
examples/esp32s3/src/: main.rs
src/: global_variables.rs  lib.rs  main.rs
src/custom/: mender_common.rs  mender_config.rs  mender_log.rs  mod.rs
src/mender_mcu_client/: mod.rs
src/mender_mcu_client/add_ons/: mender_addon.rs
src/mender_mcu_client/add_ons/configure/: mender_configure.rs  mender_configure_api.rs
src/mender_mcu_client/add_ons/inventory/: mender_inventory.rs  mender_inventory_api.rs  mod.rs
src/mender_mcu_client/core/: mender_api.rs  mender_artifact.rs  mender_client.rs  mender_utils.rs  mod.rs
src/mender_mcu_client/platform/: mod.rs
src/mender_mcu_client/platform/flash/: mender_flash.rs
src/mender_mcu_client/platform/fs/: mender_littlefs.rs  mod.rs
src/mender_mcu_client/platform/net/: mender_http.rs  mender_websocket.rs  mod.rs
src/mender_mcu_client/platform/scheduler/: mender_scheduler.rs
src/mender_mcu_client/platform/storage/: mender_storage.rs  mod.rs
src/mender_mcu_client/platform/tls/: mender_tls.rs  mod.rs
