[package]
name = "esp32-mender-client"
version = "0.1.0"
authors = ["virust-ai"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mender client library for esp32"
repository = "https://github.com/virust-ai/esp32-mender-client"

[dependencies]
embassy-executor    = "0.7.0"
embassy-net = { version = "0.6.0", features = ["dhcpv4", "dns", "tcp", "udp"] }
embassy-time        = "0.4.0"
embassy-sync        = "0.6.1"
log = { version = "0.4.22" }
heapless = { version = "0.8.0", default-features = false }
embedded-io-async = "0.6.1"
serde-json-core = "0.6.0"
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", default-features = false }
rsa = { version = "0.9.7", default-features = false, features = ["sha2"] }
base64 = { version = "0.22.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
embedded-storage = "0.3.1"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
embedded-websocket = { version = "0.9.4", default-features = false }
littlefs2 = { version = "0.6.0", default-features = false, features = ["c-stubs"]}
esp-hal = { version = "0.23.1", optional = true }
esp-storage = { version = "0.4.0", optional = true }

spin = { version = "0.9.8", default-features = false, features = ["once", "portable_atomic"], optional = true}

delog = { version = "=0.1.6", optional = true }  # Force exactly version 0.1.6

[patch.crates-io]
delog = { version = "0.1.6", git = "https://github.com/LechevSpace/delog.git", rev = "e83f3fd" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 16
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
panic = "abort"

[features]
default = ["mender_client_configure_storage"]


mender_client_configure_storage = []


esp32c2 = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32c2",
    "esp-storage/esp32c2",
]
esp32c3 = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32c3",
    "esp-storage/esp32c3",
    "dep:spin",
    "dep:delog",
]
esp32c6 = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32c6",
    "esp-storage/esp32c6",
]
esp32h2 = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32h2",
    "esp-storage/esp32h2",
]
esp32   = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32",
    "esp-storage/esp32",
]
esp32s2 = [
    "dep:esp-hal",
    "dep:esp-storage",
]
esp32s3 = [
    "dep:esp-hal",
    "dep:esp-storage",
    "esp-hal/esp32s3",
    "esp-storage/esp32s3",
]
